fix: explore collapses

--- a/src/components/ExploreDataSection/index.module.less
+++ b/src/components/ExploreDataSection/index.module.less
@@ -5,14 +5,23 @@
 
 .header {
   margin-top: -3px;
-  padding: 10.5px 22px;
+  padding: 12px 22px 9px;
   overflow: auto;
+  cursor: default;
 }
 
 .dataBtn {
   margin-right: 17px;
   color: #a31bcb;
   border-color: #a31bcb;
+}
+
+.settingsBtn {
+  padding: 0;
+  color: #000;
+  &:hover {
+    color: #a31bcb !important;
+  }
 }
 
 .popoverInner {
